# xmu_assistant_bot

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  config.toml  generate_readme.txt
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: allocator.rs  cold_storage.rs  context_clone.rs  routing.rs  serialization.rs  storage_concurrency.rs  zero_alloc.rs
data/: hot.redb
helper/: Cargo.toml
helper/src/: lib.rs
logs/: xmu_assistant_bot.2025-12-25  xmu_assistant_bot.2025-12-28  xmu_assistant_bot.2025-12-29  xmu_assistant_bot.2025-12-31  xmu_assistant_bot.2026-01-08  xmu_assistant_bot.2026-01-09  xmu_assistant_bot.2026-01-10  xmu_assistant_bot.2026-01-11  xmu_assistant_bot.2026-01-12  xmu_assistant_bot.2026-01-17
src/: config.rs  lib.rs  logger.rs  main.rs
src/abi/: box.rs  echo.rs  mod.rs  websocket.rs
src/abi/message/: event_body.rs  file.rs  helper.rs  message_body.rs  mod.rs  sender.rs
src/abi/message/api/: data.rs  mod.rs  params.rs
src/abi/message/api/data/: get_forward_msg.rs  mod.rs  send_msg.rs
src/abi/message/api/params/: mod.rs  poke.rs  send_msg.rs  title.rs
src/abi/message/helper/: arc_with.rs  message.rs  mod.rs  string.rs
src/abi/network/: client.rs  napcat.rs
src/abi/router/: context.rs  handler.rs
src/api/: mod.rs
src/api/llm/chat/: bridge.rs  config-template.rs  identity.rs  llm.rs  mod.rs  router.rs
src/api/llm/chat/archive/: bridge.rs  file.rs  file_embedding.rs  identity.rs  main.rs  memo_fragment.rs  mod.rs  (+2 more)
src/api/llm/tool/: config-template.rs  llm.rs  mod.rs
src/api/network/: download.rs  session.rs
src/api/storage/: cold.rs  file.rs  hot.rs  mod.rs  temp.rs  vector.rs
src/api/xmu_service/: location.rs  mod.rs
src/api/xmu_service/jw/: academic.rs  mod.rs  userinfo.rs  zzy.rs
src/api/xmu_service/llm/: choose_course.rs  choose_files.rs  mod.rs
src/api/xmu_service/lnt/: activities.rs  distribute.rs  exams.rs  file_url.rs  login.rs  mod.rs  my_courses.rs  profile.rs  recently_visited_courses.rs  submissions_id.rs
src/api/xmu_service/login/: mod.rs  password.rs  qrcode.rs
src/logic/: download.rs  echo.rs  llm.rs  mod.rs  test.rs
src/logic/helper/: macro.rs  mod.rs  session.rs
src/logic/login/: main.rs  mod.rs  process.rs
src/web/: mod.rs
src/web/file/: expose.rs  mod.rs  task.rs
(+21 files in other folders)
