[package]
name = "xmu_assistant_bot"
version = "0.1.0"
edition = "2024"

[workspace]
member=[".","helper"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dashmap = "6.1.0"
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
toml = "0.9.10"
tracing = "0.1.30"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
url = "2.5.7"
helper = {path = "./helper"}