[package]
name = "xmu_assistant_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dashmap = "6.1.0"
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.147", features = ["raw_value"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.30"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
helper = {path = "./helper"}
const_format = "0.2.35"
once_cell = "1.21.3"
redb = "3.1.0"
bytes = "1.11.0"
bincode = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.12.28", features = ["cookies", "json"] }
fake-useragent = "0.1.3"
rand_user_agent = "0.2.1"
fake_user_agent = "0.2.3"
regex = "1.12.2"
url-macro = "0.2.3"
url = "2.5.7"
smol_str = "0.3.4"
cookie = "0.18.1"
serde_urlencoded = "0.7.1"
ahash = "0.8.12"
rand = { version = "0.9.2", features = ["alloc"] }
softaes = "0.1.3"
soft-aes = "0.2.2"
base64 = "0.22.1"
